--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
+    
     <title>Kai Estudios | Portafolio de Ilustración y Programación</title>
 
     <meta name="description" content="Portafolio de Kai Shitsumon, un ilustrador y programador creativo. Descubre mis proyectos de ilustración, diseño y desarrollo.">
@@ -80,7 +80,6 @@
 
 </body>
 </html>
-=======
     <title>[Tu Nombre] - Ilustrador/a</title>
     
     <style>
@@ -301,7 +300,7 @@
         <section id="informacion">
             <h2>Sobre Mí</h2>
             <div class="info-personal">
-                <p>¡Hola! Soy [Tu Nombre], un ilustrador/a apasionado/a por [menciona tus intereses]. Mi proceso creativo se basa en [describe brevemente tu proceso].</p>
+                <p>¡Hola! Soy [Kai Shitsumon], un ilustrador apasionado por las Visual novels y comics.</p>
             </div>
             <div class="datos-contacto">
                 <h3>Contacto</h3>
@@ -312,7 +311,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 [Tu Nombre]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 [Kai Shitsumon]. Todos los derechos reservados.</p>
     </footer>
 
     <script>
