--- a/index.html
+++ b/index.html
@@ -77,5 +77,12 @@
         </section>
 
     </main>
-
+    <footer>
+        <div style="text-align: center; padding: 20px; margin-top: 40px; border-top: 1px solid #ccc;">
+            <a href="terminos.html" style="margin: 0 10px;">Términos y Condiciones</a>
+            <a href="privacidad.html" style="margin: 0 10px;">Política de Privacidad</a>
+            <a href="contacto.html" style="margin: 0 10px;">Contacto</a>
+            <p style="margin-top: 10px;">© 2025 KaI Estudios</p>
+        </div>
+    </footer>
 </body>
